# req2flatpak

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  COPYING  Makefile  README.md  README.rst  index.html  pyproject.toml  req2flatpak.py  req2flatpak_test.py  setup.cfg  versions.txt
.devcontainer/: devcontainer.json
.github/actions/publish-docs/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  development.yml  docs.yml  release-docs.yml
docs/: .buildinfo  Makefile  api.html  changelog.html  cli.html  development.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  rstcheck.cfg  search.html  searchindex.js
docs-changelog/: cli.html  genindex.html  index.html  introduction.html  objects.inv  search.html
docs-changelog/.doctrees/: changelog.doctree  cli.doctree  environment.pickle  introduction.doctree
docs/.doctrees/: api.doctree  changelog.doctree  cli.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree
docs/_sources/: api.rst.txt  changelog.rst.txt  cli.rst.txt  development.rst.txt
docs/source/: api.rst  changelog.rst  cli.rst  conf.py  development.rst  index.rst
docs_customization/: .buildinfo  api.html  cli.html  development.html
docs_customization/.doctrees/: cli.doctree  environment.pickle
flatpak/: Makefile  installed-packages.json  platform-info.json
lint/: .buildinfo
lint-ci/: development.html
lint-ci/.doctrees/: cli.doctree  environment.pickle
lint-ci/_sources/: development.rst.txt  index.rst.txt  installation.rst.txt
lint/.doctrees/: cli.doctree  development.doctree  environment.pickle  installation.doctree
lint/_sources/: api.rst.txt
main/: .buildinfo  api.html  changelog.html  cli.html  development.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  search.html  searchindex.js
main/.doctrees/: api.doctree  changelog.doctree  cli.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree
main/_sources/: api.rst.txt  changelog.rst.txt  cli.rst.txt  development.rst.txt  index.rst.txt
req2flatpak/: __init__.py
tests/: __init__.py  cp310-aarch64.platforminfo.json  cp310-x86_64.platforminfo.json  example_usage_test.py  platform_factory_test.py  pypi_cache.tmp  pypi_client_test.py  pypi_client_test_requests2.28.1.json  test_download_chooser.py  test_flatpak_generator.py  test_platform_factory.py  test_pypi_client.py  test_req2flatpak.py  test_req2flatpak_api.py  test_requirements_parser.py  test_tags_from_wheel_filename.py
v0.1/: development.html  index.html  installation.html  objects.inv  searchindex.js
v0.1/.doctrees/: cli.doctree  development.doctree  environment.pickle  installation.doctree
v0.1/_sources/: development.rst.txt  installation.rst.txt
v0.2/: installation.html  introduction.html  searchindex.js
v0.2/.doctrees/: cli.doctree  development.doctree  environment.pickle
v0.2/_sources/: installation.rst.txt
v0.3/: changelog.html  objects.inv  searchindex.js
v0.3.1/: .buildinfo  api.html  cli.html  installation.html  introduction.html  search.html
v0.3.1/.doctrees/: cli.doctree  environment.pickle
v0.3.1/_sources/: installation.rst.txt  introduction.rst.txt
v0.3/.doctrees/: cli.doctree  environment.pickle
v0.3/_sources/: development.rst.txt  index.rst.txt
