[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name        = "req2flatpak"
version     = "0.2.0"
description = "Generates a flatpak-builder build module for installing python packages defined in requirements.txt files."
authors     = ["johannesjh <johannesjh@users.noreply.github.com>"]
license     = "MIT"
readme      = ["README.rst", "docs/source/changelog.rst"]

[tool.poetry.scripts]
req2flatpak = 'req2flatpak:main'

[tool.poetry.dependencies]
python    = ">=3.8"
packaging = { version = "^21.3" }
pyyaml    = { version = "^6.0.1", optional = true }

[tool.poetry.extras]
yaml = ["pyyaml"]

[tool.poetry.group.lint.dependencies]
ruff = "^0.11.2"

# type stubs for mypy linting
types-setuptools = "^65.5.0.2"
types-pyyaml     = "^6.0.12.8"

# [tool.poetry.group.tests.dependencies]
pydocstyle = "<6.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx                           = "^6.2.1"
sphinx-argparse                  = "^0.4.0"
sphinx-rtd-theme                 = "^2.0.0"
sphinx-rtd-theme-github-versions = "^1.1"

[tool.bandit]
exclude_dirs = ['tests']
